# ebook-tools

./: Cargo.toml  README.md  flake.nix
ebook-drm/: Cargo.toml
ebook-drm/src/: error.rs  lib.rs
ebook-drm/src/cli/: mod.rs
ebook-info/: Cargo.toml
src/: drm.rs  error.rs  format.rs  lib.rs  metadata.rs  traits.rs
src/epub/: mod.rs
