[package]
name = "ebook-drm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ebook-drm"
path = "src/main.rs"

[lib]
name = "ebook_drm"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
ureq = { version = "2.9", features = ["json"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# Cryptography
rsa = "0.9"
aes = "0.8"
cbc = "0.1"
sha1 = "0.10"
sha2 = "0.10"
pkcs8 = "0.10"
x509-cert = "0.2"

# File formats, encoding, and other (de)serialization utils
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
quick-xml = "0.31"
toml = "0.8"
uuid = { version = "1.20", features = ["v4"] }
zip = "7.2"
